--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mongodb": "^6.18.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
