--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "body-parser": "^2.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^17.2.1",
     "express": "~4.16.1",
+    "express-session": "^1.18.2",
+    "handlebars": "^4.7.8",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "i": "^0.3.7",
